--- a/symmetry.html
+++ b/symmetry.html
@@ -104,7 +104,7 @@
                 It is frequently cited that small asymmetries can make the face unique and more attractive, because it makes the face more human. <br><br>
                 After all, no face is perfectly symmetrical. 
             </p>
-            <img src="model symmetry.png"><br>
+            <br><img src="brow slit.jpg"><br><br>
             <p> In short, symmetry mainly enhances attractiveness when it displays health cues.
                 Just like how a well-lined eyebrow slit does not detract from facial aesthetics, certain asymmetric features enhances individuality. <br><br>
 
