--- a/averageness.html
+++ b/averageness.html
@@ -181,7 +181,7 @@
                     </p>
                     </div>
                 </div>
-                <p> However, exaggerated traits that emphasize sex differences may also increase attractiveness, such as exaggerated features that increase femininity in females. <br>
+                <p> Similarly, exaggerated traits that emphasize sex differences may also increase attractiveness, such as exaggerated features that increase femininity in females. <br>
                     <i>Learn more under Sexual Dimorphism Section.</i>
                 </p>
                 <h2><br>Your Glow Up!</h2>
