--- a/sexual-dimorphism.html
+++ b/sexual-dimorphism.html
@@ -95,7 +95,7 @@
             <!--Enlow, D. H., & Hans, M. G. (1996). Essentials of facial growth. Philadelphia: W.B. Saunders Company.-->
         </p>
         <img src="dimorphic differences.jpg">
-        <p> Since females can masculine features and men can have feminine features, there is no one feature that distinguishes the male from the
+        <p> Since females can have masculine features and men can have feminine features, there is no one feature that distinguishes the male from the
             female face; it is an overall pattern enable us to recognise them apart.
             <br><br>
             These range from face shape, eye size and shape, nose size and so on.
