--- a/averageness.html
+++ b/averageness.html
@@ -65,7 +65,7 @@
         <img src ="averageness.jpg">
         <p> 
             When you blend together more faces, the resulting "composite" face becomes more average. Instinctively, the features and their relative positions on a highly average face seem "just right",
-            it is kind of face that feels like you’ve seen it before, even if you haven’t. <i>See Composite Face below under Averageness effect.</i>
+            it is the kind of face that feels like you’ve seen it before, even if you haven’t. <i>See Composite Face below under Averageness effect.</i>
             <br><br>
             While a high degree of averageness can be described as "girl next door" pretty, it plays a more profound role in facial beauty across gender and different ethnic groups. <br><br>
             <i>Note: The term "average" used throughout this page does not mean the median or mean attractiveness of the general population. 
