--- a/neoteny.html
+++ b/neoteny.html
@@ -57,8 +57,8 @@
         </p>
         <img src="babyface.png">
         <p> <br>
-            So, what is it that makes him look so youthful despite his age? 
-            Is his smooth skin the only factor? What should an individual looking to stay youthful pay attention to in order to avoid any signs of ageing?
+            So, what is it that makes a face look so youthful? 
+            Is smooth skin the only factor? What should an individual looking to stay youthful pay attention to in order to avoid any signs of ageing?
         </p>
 
 
